fix: 修复部门更新数据回填Bug，重构分布式锁为AOP切面
1. 修复 updateDept 数据回填问题
   - statusChanged 时 selectById 会覆盖内存中 applyChangeParent 已修改的 parentId/ancestors
   - 改为仅 setStatus，避免从 DB 查出旧数据覆盖
   - updateById 后重新从 DB 查询构建 DTO，确保返回最新数据

2. 新增 @DistributedLock 注解 + DistributedLockAspect 切面
   - 放置在 erp-common 模块，支持跨模块复用
   - key 支持 SpEL 表达式，支持动态参数（如 #deptId）
   - 切面 @Order(0) 确保锁在外层、事务在内层，解决先释放锁后提交事务的间隙问题
   - erp-common/pom.xml 添加 spring-boot-starter-aop 依赖

3. 重构 SysDeptServiceImpl
   - 移除 RedissonClient 依赖和 acquireGlobalDeptLock() 方法
   - 所有写方法改用 @DistributedLock 注解替代手动加锁
   - 合并 doXxx 私有方法到 public 方法中，消除不必要的间接调用
   - 仅 updateDept 保留 @Transactional（唯一多条写SQL的方法）